dropdown start over use index_again

--- a/Assets/html_style.css
+++ b/Assets/html_style.css
@@ -1,8 +1,23 @@
-h1 {
+.navbar {
+    background: #D6D6D6;
+    padding: 3px;
+}
+
+.navbar li  a {
+    background: white;
+    display: inline-block;
+    padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 3px;
+}
+
+.header {
+	font-size: 20px;
 	text-align: left;
+	padding: 10px;
 	background-color: navy;
 	color: white;
-
 }
 
 h2 {
@@ -13,3 +28,33 @@ img {
 	box-shadow: 2px 2px 2px 2px orange;
 }
 
+/* make changes on the class rather than the elements 
+so that you don't have to repeat yourself.
+*/
+
+/*as long as it is less than 600px then apply these rules:
+*/
+@media (max-width: 600px) {
+  .navbar li {
+    padding: 5px;
+  }
+/* every article that belongs to the class post, change the article margins to be reduced
+*/
+  article.post {
+    margin-right: 30px;
+    margin-left: 30px;
+  }
+/* make the nav bar disappear if it is too short 
+note: you can also do:   visibility: hidden;
+which would go whre display: none; currently is
+*/
+
+/*Note if you have the brain for it, you should use %'s to resize instead of pixels.
+Percentage is more adaptive & gives a better user experience
+*/
+
+  .navbar ul {
+    display: none;
+  }
+
+}
