--- a/Assets/html_style.css
+++ b/Assets/html_style.css
@@ -28,12 +28,12 @@ img {
 	box-shadow: 2px 2px 2px 2px orange;
 }
 
-.box {
+/*.box {
   height: 400px;
   padding: 20px;
   color: #fff;
   background: deepskyblue;
-}
+}*/
 
 .margin-top-80 {
   margin-top: 80px;
@@ -48,28 +48,28 @@ so that you don't have to repeat yourself.
 
 /*as long as it is less than 600px then apply these rules:
 */
-@media (max-width: 600px) {
+/*@media (max-width: 600px) {
   .navbar li {
     padding: 5px;
     font-size:3.5rem;
-  }
+  }*/
 /* every article that belongs to the class post, change the article margins to be reduced
 */
-  article.post {
+/*  article.post {
     margin-right: 30px;
     margin-left: 30px;
   }
-/* make the nav bar disappear if it is too short 
+ make the nav bar disappear if it is too short 
 note: you can also do:   visibility: hidden;
 which would go whre display: none; currently is
-*/
+
 
 /*Note if you have the brain for it, you should use %'s to resize instead of pixels.
 Percentage is more adaptive & gives a better user experience
 */
 
-  .navbar ul {
+/*  .navbar ul {
     display: none;
-  }
+  }*/
 
-}
+/*}*/
