comparison & individual htmls working

--- a/Assets/html_style.css
+++ b/Assets/html_style.css
@@ -34,18 +34,26 @@ h3 {
 
 img {
 	box-shadow: 2px 2px 2px 2px orange;
+
+
+.chart_title {
+  align-content: center;
 }
 
-/*.box {
+
+
+/*}
+
+.box {
   height: 400px;
   padding: 20px;
   color: #fff;
   background: deepskyblue;
-}*/
+}
 
 .margin-top-80 {
   margin-top: 80px;
-}
+}*/
 
 
 
