--- a/Assets/html_style.css
+++ b/Assets/html_style.css
@@ -64,11 +64,11 @@ so that you don't have to repeat yourself.
 
 /*as long as it is less than 600px then apply these rules:
 */
-/*@media (max-width: 600px) {
+@media (max-width: 600px) {
   .navbar li {
     padding: 5px;
     font-size:3.5rem;
-  }*/
+  }
 /* every article that belongs to the class post, change the article margins to be reduced
 */
 /*  article.post {
@@ -89,3 +89,27 @@ Percentage is more adaptive & gives a better user experience
   }*/
 
 /*}*/
+
+
+/* includes alternating gray and white with on-hover color */
+
+.mystyle {
+    font-size: 15pt; 
+    font-family: Arial;
+    border-collapse: collapse; 
+    border: 1px solid silver;
+
+}
+
+.mystyle td, th {
+    padding: 5px;
+}
+
+.mystyle tr:nth-child(even) {
+    background: #E0E0E0;
+}
+
+.mystyle tr:hover {
+    background: silver;
+    cursor: pointer;
+}
