--- a/Assets/html_style.css
+++ b/Assets/html_style.css
@@ -1,4 +1,5 @@
 .navbar {
+    font-color: teal;
     background: #D6D6D6;
     padding: 3px;
 }
@@ -13,7 +14,7 @@
 }
 
 .header {
-	font-size: 20px;
+	font-size: 10px;
 	text-align: left;
 	padding: 10px;
 	background-color: navy;
@@ -33,8 +34,9 @@ h3 {
 }
 
 img {
-	box-shadow: 2px 2px 2px 2px orange;
-
+	box-shadow: 5px 5px 5px 2px orange;
+  margin-right: 10px;
+}
 
 /*.id {
   align-content: center;
@@ -85,7 +87,7 @@ Percentage is more adaptive & gives a better user experience
 */
 
 /*  .navbar ul {
-    display: none;
+    display: none;g
   }*/
 
 /*}*/
