--- a/Assets/html_style.css
+++ b/Assets/html_style.css
@@ -71,6 +71,7 @@ so that you don't have to repeat yourself.
     padding: 5px;
     font-size:3.5rem;
   }
+}
 /* every article that belongs to the class post, change the article margins to be reduced
 */
 /*  article.post {
@@ -96,22 +97,22 @@ Percentage is more adaptive & gives a better user experience
 /* includes alternating gray and white with on-hover color */
 
 .mystyle {
-    font-size: 15pt; 
-    font-family: Arial;
-    border-collapse: collapse; 
-    border: 1px solid silver;
+    font-size: 15pt ! important; 
+    font-family: Arial ! important;
+    border-collapse: collapse ! important; 
+    border: 1px solid silver ! important;
 
 }
 
 .mystyle td, th {
-    padding: 5px;
+    padding: 5px ! important;
 }
 
 .mystyle tr:nth-child(even) {
-    background: #E0E0E0;
+    background: #E0E0E0 ! important;
 }
 
 .mystyle tr:hover {
-    background: silver;
-    cursor: pointer;
+    background: silver ! important;
+    cursor: pointer ! important;
 }
