--- a/Assets/html_style.css
+++ b/Assets/html_style.css
@@ -14,6 +14,7 @@
 }
 
 .header {
+  height: 200px;
 	font-size: 10px;
 	text-align: left;
 	padding: 10px;
@@ -38,6 +39,9 @@ img {
   margin-right: 10px;
 }
 
+.black {
+  background-color: lightgray;
+}
 /*.id {
   align-content: center;
 }*/
